--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -9,6 +9,13 @@
         font-size: 29px;
         color: #B5B6B8;
     }
+    @media only screen and (max-width: 420px) {
+        #titulo {
+            font-family: Arial;
+            font-size: 15px;
+            color: #B5B6B8;
+        }
+    }
     h3 {
         font-family: Arial;
         color: #C6C6C6;
@@ -70,14 +77,14 @@
     <div class="col-md-8 text-center" style="padding-top: 10%">
         <h1 id="titulo" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVIL</strong></h1>
         <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea la póliza</h3>
-        <img src="{% static 'img/1-2-3_cotizador_acerta_2.png' %}">
+        <img src="{% static 'img/1-2-3_cotizador_acerta_2.png' %}" class="col-xs-12">
         <h3 id="subtitulo" class="text-center">Elige la cobertura</h3><br>
     </div>
     <div class="col-md-2" style="padding-top: 10%"></div>
 </div>
 <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-2"></div>
+    <div class="col-md-3 col-xs-8">
         <div class="panel panel-default">
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><strong>OPCIÓN 1 B/. {{ cotizaciones.0.total|floatformat:2|intcomma }}</strong></h4></div>
             <div id="panel-body" class='panel-body'>
@@ -110,7 +117,9 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="row hidden-md hidden-lg"></div>
+    <div class="col-xs-2 hidden-md hidden-lg"></div>
+    <div class="col-md-3 col-xs-8">
         <div class="panel panel-default">
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><strong>OPCIÓN 2 B/. {{ cotizaciones.1.total|floatformat:2|intcomma }}</strong></div>
             <div id="panel-body" class='panel-body'>
@@ -143,11 +152,11 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-3 col-xs-4"></div>
 </div>
 <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-2"></div>
+    <div class="col-md-3 col-xs-8">
         <div class="panel panel-default">
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><strong>OPCIÓN 3 B/. {{ cotizaciones.2.total|floatformat:2|intcomma }}</strong></div>
             <div id="panel-body" class='panel-body'>
@@ -180,7 +189,9 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="row hidden-md hidden-lg"></div>
+    <div class="col-xs-2 hidden-md hidden-lg"></div>
+    <div class="col-md-3 col-xs-8">
         <div class="panel panel-default">
             <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><strong>OPCIÓN 4 B/. {{ cotizaciones.3.total|floatformat:2|intcomma }}</strong></div>
             <div id="panel-body" class='panel-body'>
@@ -213,13 +224,15 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-3 col-xs-4"></div>
 </div><br>
 <div class="col-md-4"></div>
 <div class="col-md-4 text-center">
     <a class="btn btn-lg calculate" href="{% url 'vehiculo' %}"><span class="glyphicon glyphicon-chevron-left"></span>Volver</a>
 </div>
 <div class="col-md-4"></div>
+<br>
+<br>
 <br>
 <br>
 <br>
