--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -105,7 +105,7 @@
   <div id="on-hidden-menu">
   <div class="toggle">
       {% if user.is_authenticated %}
-        <a id="open-demo"><span class="glyphicon glyphicon-menu-hamburger" style="color:black;"></span></a>
+        <a id="open-demo"><img src="{% static 'img/66x66-icono-menu.png' %}" class="menu-img"></a>
       {% endif %}
 </div>
 </div>
