correcciones front end

--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -76,7 +76,7 @@
     <div class="col-md-2" style="padding-top: 10%"></div>
     <div class="col-md-8 text-center" style="padding-top: 10%">
         <h1 id="titulo" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVIL</strong></h1>
-        <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea la póliza</h3>
+        <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
         <img src="{% static 'img/1-2-3_cotizador_acerta_2.png' %}" class="col-xs-12">
         <h3 id="subtitulo" class="text-center">Elige la cobertura</h3><br>
     </div>
