--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -88,7 +88,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
-                    <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea la póliza</h3>
+                    <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
                     <img class="col-xs-12" src="{% static 'img/1-2-3_cotizador_acerta_1.png' %}">
                     <h3 id="subtitulo2" class="text-center"><strong>INGRESA TODOS LOS DATOS</strong></h3>
                 </div>
