--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -123,7 +123,7 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
-                    <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea la póliza</h3>
+                    <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
                     <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="col-xs-12">
                     <h3 id="subtitulo2" class="text-center"><strong>COTIZA</strong></h3>
                     <br>
@@ -233,7 +233,7 @@
                         <h5><br></h5>
                         <h5><br></h5>
                         <h5><br></h5>
-                        <h5>{% bootstrap_field form.cuotas layout='horizontal' %}</h5>
+                        <h5>{% bootstrap_field form.cuotas show_label=False layout='horizontal' %}</h5>
                         <h5><br></h5>
                         <h5><br></h5>
                         <h5><br></h5>
