--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -60,6 +60,11 @@
         font-size: 13px;
         color: #828489;
     }
+    #subtitulo2 {
+        font-family: Arial;
+        font-size: 18px;
+        color: #B5B6B8;
+    }
     .text-right {
         text-align: left;
         line-height: 30px;
@@ -104,7 +109,14 @@
           color: #FFFFFF;
           background-color: #727270;
           text-align: center;
-          margin: 0 auto;
+          margin-bottom: 2px;
+          transition: all 0.8s ease;
+        }
+        .calculate2 {
+          color: #FFFFFF;
+          background-color: #727270;
+          text-align: center;
+          float: left;
           transition: all 0.8s ease;
         }
         .box {
@@ -117,15 +129,16 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-xs-12" style="padding-top: 0%">
+    <div class="col-xs-12" style="padding-top: 10%">
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center">
                     <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
                     <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
-                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="col-xs-12">
-                    <h3 id="subtitulo2" class="text-center"><strong>COTIZA</strong></h3>
+                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="col-xs-12 hidden-md hidden-lg">
+                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="img-logo hidden-xs">
+                    <h3 id="subtitulo2" class="text-center"><strong>COTIZACIÓN</strong></h3>
                     <br>
                 </div>
                 <div class="col-md-2"></div>
@@ -267,21 +280,20 @@
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-10 btn-group-lg">
-          <div class="col-md-2">
+          <div class="col-md-2 hidden-xs">
             <a class="btn btn-lg back" href="{% url 'ver_planes' pk1 pk2 pk3 pk4 %}"><span class="glyphicon glyphicon-chevron-left"></span>Volver</a>
           </div>
-          <div class="row hidden-md hidden-lg"></div>
-          <div class="col-xs-2 hidden-md hidden-lg"></div>
-            <div class="col-md-8 col-xs-10">
+            <div class="col-md-8 col-xs-12">
               {% csrf_token %}
               <button type="submit" class="btn btn-lg calculate">
                 Enviar
               </button>
               </form>
-            <div class="row hidden-md hidden-lg"></div>
+              <div class="row hidden-md hidden-lg"></div>
                 <a class="btn btn-lg back" href="{% url 'vehiculo' %}" style="margin-left:10px; float: right;">Guardar</a>
-                <a class="btn btn-lg calculate" href="{% url 'vehiculo' %}">Nueva Cotización</a>
+                <a class="btn btn-lg calculate calculate2" href="{% url 'vehiculo' %}">Nueva Cotización</a>
             </div>
+            <br><br><br><br>
             <br><br><br><br>
           </div>
 
