--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -89,7 +89,8 @@
                 <div class="col-md-8 text-center">
                     <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
                     <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
-                    <img class="col-xs-12" src="{% static 'img/1-2-3_cotizador_acerta_1.png' %}">
+                    <img src="{% static 'img/1-2-3_cotizador_acerta_1.png' %}" class="col-xs-12 hidden-md hidden-lg">
+                    <img src="{% static 'img/1-2-3_cotizador_acerta_1.png' %}" class="img-logo hidden-xs">
                     <h3 id="subtitulo2" class="text-center"><strong>INGRESA TODOS LOS DATOS</strong></h3>
                 </div>
 
