navbar and footer responsive

--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -9,11 +9,17 @@
         font-size: 29px;
         color: #B5B6B8;
     }
+    .first {
+        padding-top: 10%;
+    }
     @media only screen and (max-width: 420px) {
         #titulo {
             font-family: Arial;
             font-size: 15px;
             color: #B5B6B8;
+        }
+        .first {
+            padding-top: 20%;
         }
     }
     h3 {
@@ -73,7 +79,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-2" style="padding-top: 10%"></div>
+    <div class="col-md-2 first" style="padding-top: 10%"></div>
     <div class="col-md-8 text-center" style="padding-top: 10%">
         <h1 id="titulo" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVIL</strong></h1>
         <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
