--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -97,7 +97,7 @@
         </li>
     </ul>
 </div>
-<header class="hidden-md hidden-lg">
+<header class="navbar-fixed-top hidden-md hidden-lg">
   <nav id="menu2">
     <ul>
     </ul>
