--- a/cotizador_acerta/static/css/footer.css
+++ b/cotizador_acerta/static/css/footer.css
@@ -9,6 +9,19 @@
     z-index: 2;
 }
 
+@media only screen and (max-width: 420px) {
+    #footer {
+        position: fixed;
+        bottom: 0%;
+        width: 100%;
+        padding: 10px;
+        font-size: small;
+        color: transparent;
+        background: transparent;
+        z-index: 2;
+    }
+}
+
 .icono{
     margin-left: 5px;
     margin-right: 5px;
