--- a/cotizador_acerta/static/css/hamburger.css
+++ b/cotizador_acerta/static/css/hamburger.css
@@ -3,7 +3,12 @@ header {
   padding: 32px 5px;
   position: relative;
   z-index: 2;
-  border-bottom: 10px solid #E76C42;
+  border-bottom: 8px solid #E76C42;
+}
+
+.navbar-fixed-top {
+  border-bottom: 8px solid #E76C42;
+  z-index: 2;
 }
 
 #menu2 {
