--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -99,6 +99,9 @@
         text-align: center;
         margin-left: 10px;
     }
+    .first {
+        padding-top: 10%;
+      }
     @media only screen and (max-width: 420px) {
         #titulo-login {
             font-family: Arial;
@@ -122,6 +125,9 @@
         .box {
           font-size: 10px;
         }
+        .first {
+          padding-top: 20%;
+        }
     }
 </style>
 {% endblock extracss %}
@@ -129,7 +135,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-xs-12" style="padding-top: 10%">
+    <div class="col-xs-12 first">
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-2"></div>
