--- a/cotizador_acerta/templates/footer.html
+++ b/cotizador_acerta/templates/footer.html
@@ -1,7 +1,8 @@
 {% load static %}
 <br><br>
 <section id="footer">
-    <div class="container">
+	<img src="{% static 'img/AcertaSeguros.png'%}" class="hidden-md hidden-lg" style="max-width:60px; float: right;">
+    <div class="container hidden-xs">
         <div class="col-lg-12 text-center">
             <a id="link-footer" href="#">Términos y condiciones</a> - Acerta Seguros - Panamá - Todos los derechos reservados
         </div>
