--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -79,6 +79,12 @@
     .first {
         padding-top: 10%;
     }
+    #id_endoso{
+        z-index: 0;
+    }
+    .button-endoso{
+        z-index: 0;
+    }
     @media only screen and (max-width: 420px) {
         .first {
           padding-top: 20%;
@@ -141,7 +147,7 @@
                                         <option value="Preferencial">Acerta Preferencial</option>
                                         <option value="Uber">Acerta Uber</option>
                                     </select>
-                                    <div class="input-group-btn">
+                                    <div class="input-group-btn button-endoso">
                                         <button class="endoso btn btn-default" type="button" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-question-sign" style="color: #E76C42;"></span></button>
                                     </div>
                                 </div>
