little fixing responsive

--- a/cotizador_acerta/templates/login.html
+++ b/cotizador_acerta/templates/login.html
@@ -19,6 +19,13 @@
         font-size: 29px;
         color: #B5B6B8;
     }
+    @media only screen and (max-width: 435px) {
+        #titulo-login {
+            font-family: Arial;
+            font-size: 15px;
+            color: #B5B6B8;
+        }
+    }
     #link-acerta {
         color: #E76C42;
     }
@@ -54,6 +61,14 @@
       background: #E76C42;
       color: #FFFFFF;
     }
+    .first {
+        padding-top: 10%;
+    }
+    @media only screen and (max-width: 435px) {
+        .first {
+          padding-top: 20%;
+        }
+    }
 </style>
 
 {% endblock extracss %}
@@ -61,7 +76,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-xs-12" style="padding-top: 10%">
+    <div class="col-xs-12 first">
         <div class="row">
             <div class="col-md-12">
                 <div class="col-md-4"></div>
