--- a/cotizador_acerta/templates/administrador/list_historial_transito.html
+++ b/cotizador_acerta/templates/administrador/list_historial_transito.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}
     <h1>
-        Editar Factor: <strong>Sexo</strong>
+        Editar Factor: <strong>Historial de Tránsito</strong>
     </h1>
 {% endblock titulo %}
 
@@ -16,21 +16,24 @@
               <table id="example2" class="table table-bordered table-hover">
                 <thead>
                   <tr>
-                    <th>Sexo</th>
+                    <th>Límite Inferior</th>
+                    <th>Límite Superior</th>
                     <th>Factor</th>
                   </tr>
                 </thead>
                 <tbody>
-                    {% for sexo in sexos %}
+                    {% for historial in historiales %}
                         <tr>
-                            <td><a href="{% url 'admin_sexo' sexo.pk %}">{{ sexo.sexo }}</a></td>
-                            <td>{{ sexo.factor|floatformat:2 }}</td>
+                            <td><a href="{% url 'admin_historial_transito' historial.pk %}">{{ historial.inferior }}</a></td>
+                            <td><a href="{% url 'admin_historial_transito' historial.pk %}">{{ historial.superior }}</a></td>
+                            <td>{{ historial.factor|floatformat:2 }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
                 <tfoot>
                   <tr>
-                    <th>Sexo</th>
+                    <th>Límite Inferior</th>
+                    <th>Límite Superior</th>
                     <th>Factor</th>
                   </tr>
                 </tfoot>
