--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -142,7 +142,7 @@
                 <div class="col-md-8 text-center">
                     <h1 id="titulo-login" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVILES</strong></h1>
                     <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
-                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="col-xs-12 hidden-md hidden-lg">
+                    <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="col-xs-12 hidden-sm hidden-md hidden-lg">
                     <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}" class="img-logo hidden-xs">
                     <h3 id="subtitulo2" class="text-center"><strong>COTIZACIÓN</strong></h3>
                     <br>
