--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones.html
@@ -83,7 +83,7 @@
     <div class="col-md-8 text-center" style="padding-top: 10%">
         <h1 id="titulo" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVIL</strong></h1>
         <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea tu póliza</h3>
-        <img src="{% static 'img/1-2-3_cotizador_acerta_2.png' %}" class="col-xs-12 hidden-md hidden-lg">
+        <img src="{% static 'img/1-2-3_cotizador_acerta_2.png' %}" class="col-xs-12 hidden-sm hidden-md hidden-lg">
         <img src="{% static 'img/1-2-3_cotizador_acerta_2.png' %}" class="img-logo hidden-xs">
         <h3 id="subtitulo2" class="text-center"><strong>ELIGE LA COBERTURA</strong></h3><br>
     </div>
